<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Character Lab</string>
    <string name="action_character_cards">Character Cards</string>
    <string name="action_student_list">All Students</string>
    <string name="action_new_assessment">Add Assessment</string>
    <string name="action_add_student">Add Students</string>
    <string name="title_activity_student_details">Student</string>
    <string name="title_activity_strength_details">Strength</string>
    <string name="login_button_title">Login</string>
    <string name="user_name_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_message">There was an error trying to log in.</string>
    <string name="logout_warning_text">Are you sure you want to logout?</string>
    <string name="logout_action">Logout</string>
    <string name="save_warning_text">Save %1$s\'s assessment?</string>
    <string name="save_action">Save</string>
    <string name="cancel_action">Cancel</string>
    <string name="saved_confirmation">Saved!</string>
    <string name="back_to_profile_action">Back to characters</string>
    <string name="details_label">Details</string>
    <string name="overview_label">Overview</string>
    <string name="strong_trait_label">Strong Traits</string>
    <string name="need_help_label">Needs Help</string>
    <string name="improvement_label">Improved</string>
    <string name="curiosity_card_title">Curiosity</string>
    <string name="curisosity_card_description">Curiosity is the search for information for its own sake.</string>
    <string name="gratitude_card_title">Gratitude</string>
    <string name="gratitude_card_description">Gratitude refers to appreciation for the benefits we receive from others.</string>
    <string name="grit_card_title">Grit</string>
    <string name="grit_card_description">Grit is perseverance and passion for long-term goals.</string>
    <string name="optimism_card_title">Optimism</string>
    <string name="optimism_card_description">Optimism is the expectation that the future holds positive possibilities.</string>
    <string name="self_control_card_title">Self-Control</string>
    <string name="self_control_card_description">Self-control is the capacity to regulate thoughts, feelings, or behaviors when they conflict with valued goals.</string>
    <string name="social_intelligence_card_title">Social Intelligence</string>
    <string name="social_intelligenced_card_description">Social intelligence refers to awareness of other people’s motives and feelings.</string>
    <string name="zest_card_title">Zest</string>
    <string name="zest_card_description">Zest is an approach to life filled with excitement and energy.</string>
    <string name="characer_card_view_detail_button_title">Tap to Explore</string>
    <string name="title_activity_new_assessment">Add Assessment</string>
    <string name="score">Score</string>
    <string name="avg_score">Avg:  </string>
    <string name="new_assessment_confirmation_title">Save Assessment</string>
    <string name="new_assessment_confirmation_msg">Are you sure you want to save the new assessment?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_improve_label">How To Improve</string>
    <string name="bad_students_title">STUDENTS, WHO NEED HELP</string>
    <string name="good_students_title">STUDENTS, WHO ARE DOING WELL</string>
    <string name="measurement_record">Measurement Record</string>
    <string name="almost_never">Almost Never</string>
    <string name="very_rarely">Very Rarely</string>
    <string name="rarely">Rarely</string>
    <string name="sometimes">Sometimes</string>
    <string name="often">Often</string>
    <string name="very_often">Very Often</string>
    <string name="almost_always">Almost Always</string>
    <string name="title_activity_new_student">New Students</string>
    <string name="create">Add</string>
    <string name="done">Done</string>
    <string name="student_name_label">Student\'s Name</string>
    <string name="add_another_student">Add Another Student</string>

</resources>
