<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity" >
    <item android:id="@+id/action_character_cards"
          android:title="@string/action_character_cards"
          android:orderInCategory="200"
          android:icon="@drawable/ic_cards"
          android:showAsAction="always" />
    <item android:id="@+id/action_student_list"
        android:title="@string/action_student_list"
        android:icon="@drawable/ic_students"
        android:orderInCategory="300"
        android:showAsAction="always" />
    <item android:id="@+id/action_new_assessment"
        android:title="@string/action_new_assessment"
        android:icon="@drawable/ic_add_assessment"
        android:orderInCategory="400"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_student"
        android:title="@string/action_add_student"
        android:icon="@drawable/ic_add_student"
        android:orderInCategory="500"
        android:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="Logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="600"
        android:showAsAction="never" />
</menu>
