<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/llAssessmentCard"
        android:background="@color/bg_beige"
        android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivAssessmentCardIcon"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/curiosity_card_title"
        android:textColor="@color/character_card_title_text_color"
        android:id="@+id/tvAssessmentCardTitle"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curisosity_card_description"
        android:id="@+id/tvAssessmentCardDescription"
        android:textColor="@color/character_card_description_text_color"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:lineSpacingMultiplier="1.25"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/character_card_title_text_color"
        android:id="@+id/tvAssessmentCardScoreLabel"
        android:textSize="15sp"
        android:lineSpacingMultiplier="1.25"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="@color/character_card_title_text_color"
        android:id="@+id/tvAssessmentCardScore"
        android:textSize="30sp"
        android:gravity="center" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/sbAssessmentCardScore"
        android:max="6"
        android:indeterminate="false" />


</LinearLayout>
