<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BlankFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".fragments.CharacterCardsFragment"
        android:orientation="vertical"
        android:id="@+id/rlCard"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/character_card_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/curiosity_card_title"
            android:textColor="@color/character_card_title_text_color"
            android:id="@+id/tvTitle"
            android:textSize="30sp"
            android:layout_weight="2"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:text="@string/curisosity_card_description"
            android:id="@+id/tvDescription"
            android:textColor="@color/character_card_description_text_color"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:lineSpacingMultiplier="1.25"
            android:layout_weight="2"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/characer_card_view_detail_button_title"
            android:id="@+id/tvExplore"
            android:textColor="@color/character_lab_green_color"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="15sp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:gravity="center" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:layout_above="@id/tvExplore"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true"
            android:id="@+id/ivIcon"
            android:layout_weight="12"
            android:scaleType="fitCenter"
            />

    </RelativeLayout>
</FrameLayout>
