<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlHistory"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/ivHistoryStrengthLogo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curiosity_card_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/tvHistoryStrengthTitle"
            android:layout_toRightOf="@+id/ivHistoryStrengthLogo"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivHistoryStrengthLogo"
            android:layout_below="@+id/tvHistoryStrengthTitle"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curisosity_card_description"
                android:textSize="15sp"
                android:id="@+id/tvHistoryStrengthDescr"/>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_score"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="30sp"
            android:id="@+id/tvHistoryAvgScore"
            android:layout_marginTop="5dp"
            android:gravity="center"
            />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <view
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            class="org.characterlab.android.views.LineView"
            android:id="@+id/line_view"
            android:gravity="center"/>
    </HorizontalScrollView>

</LinearLayout>